--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -127,14 +127,14 @@
     <td valign="top" class="content_main">
 
 
-    <!-- NEWS -->
+     <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">December 29, 2011<br>Data Crow 3.9.11 has been released</span><br><br>Contains important bug fixes and small changes<br><br>
         <span class="content_main_bold">November 19, 2011<br>Data Crow 3.9.10 has been released</span><br><br>Contains important bug fixes<br><br>
-        <span class="content_main_bold">June 18, 2011<br>Data Crow 3.9.9 has been released</span><br><br>Contains important bug fixes<br><br>
-        <span class="content_main_bold">June 13, 2011<br>Data Crow 3.9.8 has been released</span><br><br>Contains various bug fixes<br><br>
 
 <!-- NEWS END -->
+
 
   </td>
 
@@ -159,9 +159,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.10/datacrow_3_9_10_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.10/datacrow_3_9_10_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.10/datacrow_3_9_10_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.11/datacrow_3_9_11_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.11/datacrow_3_9_11_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.11/datacrow_3_9_11_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -178,7 +178,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.10/datacrow_3_9_10_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.11/datacrow_3_9_11_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
