--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -194,8 +194,9 @@
      <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">June 16, 2012<br>Data Crow 3.9.14 has been released</span><br><br>Contains bug fixes for Google search and the reports<br><br>
         <span class="content_main_bold">June 9, 2012<br>Data Crow 3.9.13 has been released</span><br><br>A new release with bug fixes and new functionaliy<br><br>
-        <span class="content_main_bold">March 9, 2012<br>Data Crow 3.9.12 has been released</span><br><br>A new release with bug fixes and new functionaliy<br><br>
+
 <!-- NEWS END -->
 
 
@@ -224,9 +225,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.13/datacrow_3_9_13_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.13/datacrow_3_9_13_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.13/datacrow_3_9_13_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -243,7 +244,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.13/datacrow_3_9_13_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.14/datacrow_3_9_14_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
