--- a/homepage/news.html
+++ b/homepage/news.html
@@ -67,6 +67,10 @@
         can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">January 12, 2013 ~ Data Crow 3.9.17 has been released</span>  <br><br>
+         Added a parameter (-userdir:) to indicate the user directory to use. This allows you to run multiple instances of Data Crow looking at different user folders. Additionally I have added small fixes for potential problems while defining a user folder within the current Data Crow installation folder.
+
+<br><br><br>
         <span class="content_main_bold">January 11, 2013 ~ Data Crow 3.9.16 has been released</span>  <br><br>
          Linux fix for upgrades and a new feature. You can now select a user folder where all data is stored. This helps in avoiding the Windows problem of protected folders in the C:\Program Files\ folders as well as protected folders on other systems. On startup you will be asked to select the user folder. After selecting the folder Data Crow will migrate your data to this folder and will use this folder from then on. Please see the changelog for the details!
 
@@ -228,11 +232,11 @@
      <!-- NEWS -->
     
     <span class="content_main_bold">Latest news</span><br><br>
+        <span class="content_main_bold">January 12, 2013<br>Data Crow 3.9.17 has been released</span><br><br>Added an option to use multiple instances of Data Crow.<br><br>
         <span class="content_main_bold">January 11, 2013<br>Data Crow 3.9.16 has been released</span><br><br>A fix for the failed upgrades as well as a new feature.<br><br>
         <span class="content_main_bold">January 6, 2013<br>Data Crow 3.9.15 has been released</span><br><br>Many important fixes for the start of 2013.<br><br>
-        <span class="content_main_bold">June 16, 2012<br>Data Crow 3.9.14 has been released</span><br><br>Contains bug fixes for Google search and the reports<br><br>
- 
-    <!-- NEWS END -->
+
+<!-- NEWS END -->
 
 
   </td>
@@ -257,9 +261,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.16/datacrow_3_9_16_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.16/datacrow_3_9_16_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.16/datacrow_3_9_16_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.17/datacrow_3_9_17_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.17/datacrow_3_9_17_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.17/datacrow_3_9_17_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -276,7 +280,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.16/datacrow_3_9_16_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.9.17/datacrow_3_9_17_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
